--- a/src/template.html
+++ b/src/template.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/color/96/000000/developer.png"/>
     <title>
-      Kevin Ariza | Full-Stack Developer | Software Engineer
+      Jorge Santamaria | Full-Stack Developer
     </title>
-    <meta name="keywords" content="kevwas, Kevin Ariza, Web Developer, Software, Full-Stack, Engineer, Web" />
+    <meta name="keywords" content="Jorge Santamaria, Web Developer, Software, Full-Stack, Engineer, Web" />
     <!-- Improve your SEO by adding a small descrption of you -->
-    <meta name="description" content="Kevin Ariza | Full-Stack Software Developer | Engineer" />
+    <meta name="description" content="Jorge Santamaria| Full-Stack Software Developer" />
 
     <!-- Required librarys -->
     <link
@@ -42,17 +42,18 @@
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
-          Hi, my name is <span class="text-color-main">Kevin Ariza</span>.
+          Welcome to my website. 
+          My name is <span class="text-color-main">Jorge Santamaria</span>
         </h1>
         <h3 class="hero-sub" class="load-hidden">
-          I am a Full-Stack Developer | Software Engineer at 
+          I am a Full-Stack Developer 
           <a 
             class="hero-sub" 
             style="position: relative; color: white; text-decoration: none; text-shadow: 2px 2px 6px rgba(4,119,135,0.63);" 
             target="_blank" 
-            href="https://blankfactor.com/"
+            href=""
           >
-            Blankfactor
+            <!--Company name-->
           </a>
           <br />
         </h3>
@@ -86,13 +87,16 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am passionate about science, technology and challenges, always eager for learning new things and solving problems while working on projects in order to improve my skills and contribute with the community.
+                I am a full stack web developer and psychologist interested in learning more about science and how
+                to improve human life through code. I believe that we can solve the problems of society using the power of technologies.
               </p>
               <p class="about-wrapper__info-text">
-                Also, I like art, architecture, and music, therefore I enjoy designing well structured and beautiful user interfaces.
+                Similarly, I like the arts, especially music. I believe that both technology and culture are essential for 
+                the development of societies.
               </p>
               <p class="about-wrapper__info-text">
-                I love programming and that's what I do almost every day, but when I am not programming or learning about it, I spend time with my family, read a good book, or ride my bike.
+                I really like programming and finding solutions to different problems. I am a faithful believer that as I become 
+                a better person, I will be a better person in any activity that I propose.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://www.dropbox.com/s/39zlmxdvm36h6nt/Developer%20CV%20EN.pdf?dl=0">
@@ -119,31 +123,34 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Pollster (Web)</h3>
-                <p><strong>IN DEVELOPMENT</strong></p>
+                <h3 class="project-wrapper__text-title">OhMyFood! (Delivery Food Order)</h3>
+                <!-- <p><strong>IN DEVELOPMENT</strong></p> -->
                 <div>
                   <p class="mb-4">
-                    A Polls app intended to be used also as a social media where people can share their minds and agree on opinions. 
-                    I made this project with Python and Django, I used PostgreSQL for the database and Heroku for the hosting. 
-                    Also, I followed a Test Driven Development approach using the Django Testing Tools.
+                    A web-app that allows requests to be made to a database 
+                    that contains information about the restaurant's menu. 
+                    Likewise, it allows the user to place food delivery orders, 
+                    which can be seen on an administration website. 
+                    The project was carried out in PHP and the MariaDB 
+                    database was used, through phpmyadmin.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://pollsterwtp.herokuapp.com/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ohmyfood-app.herokuapp.com/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Kevwas/Pollster">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/SantamariaRamosJ/food-order">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://pollsterwtp.herokuapp.com/" target="_blank">
+                <a href="https://ohmyfood-app.herokuapp.com/" target="_blank">
                     <img data-tilt
                       class="img-fluid thumbnail rounded"
                       height="auto"
                       width="370"
-                      src="./assets/pollster.png" />
+                      src="./assets/ohmyfood.png" />
                 </a>
               </div>
             </div>
