--- a/src/template.html
+++ b/src/template.html
@@ -80,7 +80,7 @@
                   style="background-color: rgba(206, 205, 205, 0.2);"
                   height="auto"
                   width="380px"
-                  src="./assets/me.png"
+                  src="./assets/jorge.jpg"
                   alt="Profile Image"
                 />
           </div>
@@ -96,10 +96,10 @@
               </p>
               <p class="about-wrapper__info-text">
                 I really like programming and finding solutions to different problems. I am a faithful believer that as I become 
-                a better person, I will be a better person in any activity that I propose.
+                a better person, I will be a better in any activity that I propose.
               </p>
               <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="https://www.dropbox.com/s/39zlmxdvm36h6nt/Developer%20CV%20EN.pdf?dl=0">
+                <a target="_blank" class="cta-btn cta-btn--resume" href="https://www.dropbox.com/s/ygtpdego78y2171/Jorge%20Santamaria%20-%20Resume%20-%20Web%20Development.pdf?dl=0">
                   Resume
                 </a>
               </span>
@@ -161,25 +161,28 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">PagoLinea App (Mobile)</h3>
+                <h3 class="project-wrapper__text-title">Smart Brain (Face Recognition)</h3>
                 <div>
                   <p class="mb-4">
-                    I made this app for a company based in Argentina, it is a payment's processor. I used React Native for making this. It is full of cool features.
+                    Smart Brain is a web application that uses an API created by Clarifai for the recognition of faces in pictures. This project is made up of three parts: an API built with Node.JS and Express, a database designed in PostgreSQL, and a front-end built in React.JS.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://play.google.com/store/apps/details?id=com.pagolineaapp&hl=es_419">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://face-recognition-app-one.herokuapp.com/">
                   See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/SantamariaRamosJ/face-recognition-app">
+                  Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://play.google.com/store/apps/details?id=com.pagolineaapp&hl=es_419" target="_blank">
+                <a href="https://face-recognition-app-one.herokuapp.com/" target="_blank">
                     <img data-tilt
                       class="img-fluid thumbnail rounded"
                       height="auto"
                       width="370"
-                      src="./assets/1.jpg" />
+                      src="./assets/smart-brain.png" />
                 </a>
               </div>
             </div>
@@ -190,28 +193,28 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Covid-19 Charts (Web)</h3>
+                <h3 class="project-wrapper__text-title">La Lámpara del Ermitaño (tarot website)</h3>
                 <div>
                   <p class="mb-4">
-                    Wanting to craft a good app with charts and looking to help the community in the current world situation, I've built a web app that shows simple and clear charts of COVID-19 global figures, I made it with ReacJS and ChartJS, using the amazing API that Kyle Redelinghuys and Kyle Hauptfleisch built.
+                    This page allows the user to search on the different tarot cards, as well as make random card draws. I developed it with HTML5, CSS3 and Javascript, for the team of psychologists at the Eleusis Institute of Lima, Peru.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://covid19charts-641f3.firebaseapp.com/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://santamariaramosj.github.io/tarot-page/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Kevwas/covid19charts">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/SantamariaRamosJ/tarot-page">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://covid19charts-641f3.firebaseapp.com/" target="_blank">
+                <a href="https://github.com/SantamariaRamosJ/tarot-page" target="_blank">
                     <img data-tilt
                       class="img-fluid thumbnail rounded"
                       height="auto"
                       width="370px"
-                      src="./assets/covid19charts.png" />
+                      src="./assets/tarot.png" />
                 </a>
               </div>
             </div>
@@ -222,28 +225,28 @@
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
-                <h3 class="project-wrapper__text-title">Recipes App (Web)</h3>
+                <h3 class="project-wrapper__text-title">Alquimia Personal (Landing Page)</h3>
                 <div>
                   <p class="mb-4">
-                    This is a web app of recipes in which the user can search between thousands of recipes and get complete information about them, including calories and ingredients, save or delete the recipes in its account, and also, the user can go to the original site of the recipe to get even more information. I built the app using ReactJS, ExpressJS, and PostgreSQL and I used the spoonacular's API to fetch the data.
+                    I created this landing page for a group of psychologists and therapists from the Eleusis Institute of Deep Psychology. Its design was made with HTML5, CSS3 and Bootstrap.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://delicious-recipe.herokuapp.com/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://santamariaramosj.github.io/alquimia-web/">
                   See Live
                 </a>
-                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/Kevwas/Recipes-app">
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/SantamariaRamosJ/alquimia-web">
                   Source Code
                 </a>
               </div>
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://delicious-recipe.herokuapp.com/" target="_blank">
+                <a href="https://santamariaramosj.github.io/alquimia-web/" target="_blank">
                     <img data-tilt
                       class="img-fluid thumbnail rounded"
                       height="auto"
                       width="370px"
-                      src="./assets/recipes.png" />
+                      src="./assets/alquimia.png" />
                 </a>
               </div>
             </div>
@@ -312,28 +315,29 @@
               <div className='box'>
                 <img data-tilt
                     class="icon section-title"
-                    src="https://img.icons8.com/color/80/000000/typescript.png"
+                    src="https://img.icons8.com/officel/80/000000/php-logo.png"
                 />
-                <p class="name section-title">TypeScript</p>
+                <p class="name section-title">PHP</p>
               </div>
 
               <div className='box'>
                 <img data-tilt
                     class="icon section-title"
                     src="https://img.icons8.com/color/80/000000/react-native.png"
+                    
                 />
                 <p class="name section-title">ReactJS</p>
               </div>
 
-              <div className='box'>
+              <!-- <div className='box'>
                 <img
                   class="icon section-title"
                   src="https://img.icons8.com/nolan/80/react-native.png"
                 />
                 <p class="name section-title">React Native</p>
-              </div>
+              </div> -->
 
-              <div className='box'>
+              <!-- <div className='box'>
                 <img
                   class="icon section-title"
                   src="https://img.icons8.com/color/80/000000/android-os.png"
@@ -347,31 +351,31 @@
                   src="https://img.icons8.com/color/80/000000/ios-logo.png"
                 />
                 <p class="name section-title">iOS</p>
-              </div>
+              </div> -->
               
-              <div className='box'>
+              <!-- <div className='box'>
                 <img
                   class="icon section-title"
                   src="https://img.icons8.com/color/80/000000/python.png"
                 />
                 <p class="name section-title">Python</p>
-              </div>
+              </div> -->
 
-              <div className='box'>
+              <!-- <div className='box'>
                 <img
                   class="icon section-title"
                   src="https://img.icons8.com/color/80/000000/django.png"
                 />
                 <p class="name section-title">Django</p>
-              </div>
+              </div> -->
 
               <div className='box'>
                 <img data-tilt
                     class="icon section-title"
-                    src="https://img.icons8.com/officel/80/000000/doughnut-chart.png"
+                    src="https://img.icons8.com/color/80/000000/wordpress.png"
                 />
-                <p class="name section-title">ChartJS</p>
-              </div>
+                <p class="name section-title">Wordpress</p>
+              </div> 
 
               <div className='box'>
                 <img
@@ -469,13 +473,13 @@
                 <p class="name section-title">Trello</p>
               </div>
 
-              <div className='box'>
+              <!-- <div className='box'>
                 <img data-tilt
                     class="icon section-title"
                     src="https://img.icons8.com/color/80/4a90e2/ubuntu--v1.png"
                 />
                 <p class="name section-title">Ubuntu</p>
-              </div>
+              </div> -->
 
               <div className='box'>
                 <img data-tilt
@@ -485,15 +489,15 @@
                 <p class="name section-title">Windows</p>
               </div>
 
-              <div className='box'>
+              <!-- <div className='box'>
                 <img data-tilt
                     class="icon section-title"
                     src="https://img.icons8.com/nolan/80/mac-logo.png"
                 />
                 <p class="name section-title">MacOS</p>
-              </div>
+              </div> -->
 
-              <div className='box'>
+              <!-- <div className='box'>
                 <img data-tilt
                     class="icon section-title"
                     src="https://img.icons8.com/fluent/80/000000/arduino.png"
@@ -507,7 +511,7 @@
                     src="https://img.icons8.com/color/80/000000/raspberry-pi.png"
                 />
                 <p class="name section-title">Raspberry Pi</p>
-              </div>
+              </div> -->
         </div>
       </div>
     </section>
@@ -521,7 +525,7 @@
         </h2>
         <div class="contact-wrapper">
           <p class="contact-wrapper__text">
-            Want to talk about something ?
+            Do you want to talk about something interesting ?
           </p>
           <a
             target="_blank"
@@ -530,7 +534,7 @@
             >Send me an email</a
           >
           <p class="contact-wrapper__email">
-            arizakevin.dev@gmail.com
+            santamaria.web.dev@gmail.com
           </p>
         </div>
       </div>
@@ -546,10 +550,10 @@
           <i class="fa fa-angle-up fa-2x" aria-hidden="true"></i>
         </a>
         <div class="social-links">
-          <a href="https://www.linkedin.com/in/kevinwarizas/" target="_blank">
+          <a href="https://www.linkedin.com/in/santamariaramosj/" target="_blank">
             <i class="fa fa-linkedin fa-inverse"></i>
           </a>
-          <a href="https://github.com/Kevwas/" target="_blank">
+          <a href="https://github.com/SantamariaRamosJ/" target="_blank">
             <i class="fa fa-github fa-inverse"></i>
           </a>
         </div>
