--- a/src/template.html
+++ b/src/template.html
@@ -86,16 +86,16 @@
           <div class="col-md-6 col-sm-12">
             <div class="about-wrapper__info">
               <p class="about-wrapper__info-text">
-                I am a full stack web developer and psychologist interested in learning more about science and how
+                I am a full-stack web developer and psychologist interested in learning more about science and how
                 to improve human life through code. I believe that we can solve the problems of society using the power of technologies.
               </p>
               <p class="about-wrapper__info-text">
-                Similarly, I like the arts, especially music. I believe that both technology and culture are essential for 
+                Similarly, I like arts, especially music. I believe that both technology and culture are essential for 
                 the development of societies.
               </p>
               <p class="about-wrapper__info-text">
-                I really like programming and finding solutions to different problems. I am a faithful believer that as I become 
-                a better person, I will be a better in any activity that I propose.
+                I really enjoy programming and finding solutions to different problems. I am a faithful believer that as I become 
+                a better person, I will be better in any activity that I propose to myself.
               </p>
               <span class="d-flex mt-3">
                 <a target="_blank" class="cta-btn cta-btn--resume" href="https://www.dropbox.com/s/yeabzvz7e5nvu9d/Jorge%20Santamaria%20-%20Resume%20-%20Web%20Development.pdf?dl=0">
@@ -130,8 +130,7 @@
                     that contains information about the restaurant's menu. 
                     Likewise, it allows the user to place food delivery orders, 
                     which can be seen on an administration website. 
-                    The project was carried out in PHP and the MariaDB 
-                    database was used, through phpmyadmin.
+                    The project was carried out in PHP and MariaDB, through phpmyadmin.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://ohmyfood-app.herokuapp.com/">
@@ -163,7 +162,7 @@
                 <h3 class="project-wrapper__text-title">Smart Brain (Face Recognition)</h3>
                 <div>
                   <p class="mb-4">
-                    Smart Brain is a web application that uses an API created by Clarifai for the recognition of faces in pictures. This project is made up of three parts: an API built with Node.JS and Express, a database designed in PostgreSQL, and a front-end built in React.JS.
+                    Smart Brain is a web application that uses the Clarifai API for the recognition of faces in pictures. This project is made up of three parts: an API built with NodeJS and ExpressJS, a database designed in PostgreSQL, and a front-end built in ReactJS.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://face-recognition-app-one.herokuapp.com/">
@@ -227,7 +226,7 @@
                 <h3 class="project-wrapper__text-title">Alquimia Personal (Landing Page)</h3>
                 <div>
                   <p class="mb-4">
-                    I created this landing page for a group of psychologists and therapists from the Eleusis Institute of Deep Psychology. Its design was made with HTML5, CSS3 and Bootstrap.
+                    I created this landing page for a group of psychologists and therapists from the Eleusis Institute of Depth Psychology. I developed it with HTML5, CSS3 and Bootstrap.
                   </p>
                 </div>
                 <a target="_blank" class="cta-btn cta-btn--hero" href="https://santamariaramosj.github.io/alquimia-web/">
