--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/ios/50/000000/developer.png"/>
     <title>
-      Jorge Santamaria | Full-Stack Developer
+      Jorge Santamaria | Full-Stack Web Developer
     </title>
     <meta name="keywords" content="Jorge Santamaria, Web Developer, Software, Full-Stack, Engineer, Web" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -45,7 +45,7 @@
           My name is <span class="text-color-main">Jorge Santamaria</span>
         </h1>
         <h3 class="hero-sub" class="load-hidden">
-          I am a Full-Stack Developer 
+          I am a Full-Stack Web Developer 
           <a 
             class="hero-sub" 
             style="position: relative; color: white; text-decoration: none; text-shadow: 2px 2px 6px rgba(4,119,135,0.63);" 
