--- a/src/template.html
+++ b/src/template.html
@@ -133,7 +133,7 @@
                     The project was carried out in PHP and MariaDB, through phpmyadmin.
                   </p>
                 </div>
-                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ohmyfood-app.herokuapp.com/">
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://ohmyfood-restaurant.herokuapp.com/">
                   See Live
                 </a>
                 <a target="_blank" class="cta-btn text-color-main" href="https://github.com/SantamariaRamosJ/food-order">
@@ -143,7 +143,7 @@
             </div>
             <div class="col-lg-8 col-sm-12">
               <div class="project-wrapper__image">
-                <a href="https://ohmyfood-app.herokuapp.com/" target="_blank">
+                <a href="https://ohmyfood-restaurant.herokuapp.com/" target="_blank">
                     <img data-tilt
                       class="img-fluid thumbnail rounded"
                       height="auto"
