--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="https://img.icons8.com/ios/50/000000/developer.png"/>
     <title>
-      Jorge Santamaria | Full-Stack Web Developer
+      Jorge Santamaria | Full-Stack Web and Mobile Developer
     </title>
     <meta name="keywords" content="Jorge Santamaria, Web Developer, Software, Full-Stack, Engineer, Web" />
     <!-- Improve your SEO by adding a small descrption of you -->
@@ -45,7 +45,7 @@
           My name is <span class="text-color-main">Jorge Santamaria</span>
         </h1>
         <h3 class="hero-sub" class="load-hidden">
-          I am a Full-Stack Web Developer 
+          I am a Full-Stack Web and Mobile Developer 
           <a 
             class="hero-sub" 
             style="position: relative; color: white; text-decoration: none; text-shadow: 2px 2px 6px rgba(4,119,135,0.63);" 
@@ -119,6 +119,71 @@
           </h2>
 
           <!-- Each .row is a project -->
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">Flutter Chat UI</h3>
+                <!-- <p><strong>IN DEVELOPMENT</strong></p> -->
+                <div>
+                  <p class="mb-4">
+                    I created this app using Flutter and Material UI library. This app shows my skills 
+                    using Flutter framework to design multiple widgets. I also used Android Studio to render 
+                    the app during the coding process. It is available for Android devices.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/15ZuxeGPFnvqeFrFBe6gEuR7VGtNMsz6d/view?usp=sharing">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/SantamariaRamosJ/chat_app">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://drive.google.com/file/d/15ZuxeGPFnvqeFrFBe6gEuR7VGtNMsz6d/view?usp=sharing" target="_blank">
+                    <img data-tilt
+                      class="img-fluid thumbnail rounded"
+                      height="auto"
+                      width="250"
+                      src="./assets/chat_app1.png" />
+                </a>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4 col-sm-12">
+              <div class="project-wrapper__text">
+                <h3 class="project-wrapper__text-title">First Flutter App (Quiz App)</h3>
+                <!-- <p><strong>IN DEVELOPMENT</strong></p> -->
+                <div>
+                  <p class="mb-4">
+                  This is my first app created with Flutter framework. It is inspired in trivia apps 
+                  to evaluate general culture knowledge. It is available for Android devices.
+                  </p>
+                </div>
+                <a target="_blank" class="cta-btn cta-btn--hero" href="https://drive.google.com/file/d/1ux0ftns1qw-0jYPDMHk5vHrYDbOgP2OC/view?usp=sharing">
+                  See Live
+                </a>
+                <a target="_blank" class="cta-btn text-color-main" href="https://github.com/SantamariaRamosJ/flutter_project">
+                  Source Code
+                </a>
+              </div>
+            </div>
+            <div class="col-lg-8 col-sm-12">
+              <div class="project-wrapper__image">
+                <a href="https://drive.google.com/file/d/1ux0ftns1qw-0jYPDMHk5vHrYDbOgP2OC/view?usp=sharing" target="_blank">
+                    <img data-tilt
+                      class="img-fluid thumbnail rounded"
+                      height="auto"
+                      width="250"
+                      src="./assets/quiz_app.png" />
+                </a>
+              </div>
+            </div>
+          </div>
+
           <div class="row">
             <div class="col-lg-4 col-sm-12">
               <div class="project-wrapper__text">
@@ -366,6 +431,13 @@
                 />
                 <p class="name section-title">Django</p>
               </div> -->
+              <div className='box'>
+                <img data-tilt
+                    class="icon section-title"
+                    src="https://img.icons8.com/color/80/000000/flutter.png"
+                />
+                <p class="name section-title">Flutter</p>
+              </div> 
 
               <div className='box'>
                 <img data-tilt
